Tweaked colors of canvas grid.